# pymsym

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheel.yml
bindings/python/: setup.py
bindings/python/libmsym/: __init__.py  libmsym.py
examples/python/: msympy_example.py
src/pymsym/: high_level.py  pymsym.py
test/: test.py
