[project]
name = "pymsym"
version = "0.3.4"
description = "libmsym python binding"
authors = [{name = "Corin Wagen", email = "corinwagen@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['symmetry', 'molecules', 'chemistry']
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.8",
]

[project.urls]
Homepage = "https://github.com/corinwagen/pymsym"


[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
#build = "cp311*"
skip = "pp*"

